NDK armeabi build: ./build_NDK_cmake.sh -abi armeabi -acc generic -c NDK build all: ./NDK_all.sh
output:
$FFTE_OUT/armeabi/libffte.a
$FFTE_OUT/libs/armeabi/libffte.a

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -139,9 +139,15 @@ if(UNIX)
 endif()
 
 if(ANDROID_NDK)
-  target_link_libraries(ffte m)
-  target_link_libraries(ffte_vec m)
-  target_link_libraries(ffte_cuda m)
+	if(BUILD_FFTE_GENERIC)
+		target_link_libraries(ffte m)
+	endif()
+	if(BUILD_FFTE_VEC)
+		target_link_libraries(ffte_vec m)
+	endif()
+	if(BUILD_FFTE_CUDA)
+		target_link_libraries(ffte_cuda m)
+	endif()
 endif(ANDROID_NDK)
 
 #target_link_libraries(ffte)
